--- a/pom.xml
+++ b/pom.xml
@@ -4,34 +4,235 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>JavaDesignChat</artifactId>
-    <version>1.0</version>
+    <!-- Basic Config -->
+    <groupId>org.gladiator</groupId>
+    <artifactId>JMessenger</artifactId>
+    <version>0.0.2</version>
 
+    <!-- Organization Config -->
+    <description>Robust and efficient chat designed for terminal-based communication</description>
+    <inceptionYear>2025</inceptionYear>
+    <organization>
+        <name>org.gladiator</name>
+    </organization>
 
+    <!-- App Properties -->
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <artifacts.output.directory>${project.build.directory}/artifacts</artifacts.output.directory>
     </properties>
 
+    <build>
+        <sourceDirectory>src/main/org/gladiator</sourceDirectory>
+        <plugins>
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
+            <!-- Create Application Jars -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>module-info.class</exclude>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                                <exclude>META-INF/LICENSE.txt</exclude>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                                <exclude>META-INF/versions/9/module-info.class</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <!-- Server JAR-->
+                    <execution>
+                        <id>shade-server-main</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>Server</finalName>
+                            <outputDirectory>${artifacts.output.directory}</outputDirectory>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>app.server.ServerMain</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                    <!-- Client JAR-->
+                    <execution>
+                        <id>shade-client-main</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>Client</finalName>
+                            <outputDirectory>${artifacts.output.directory}</outputDirectory>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>app.client.ClientMain</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- https://mvnrepository.com/artifact/com.akathist.maven.plugins.launch4j/launch4j-maven-plugin -->
+            <!-- Create Application Windows Executables -->
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <!-- Server Executable -->
+                    <execution>
+                        <id>executable-server-main</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <icon>src/main/resources/images/server.ico</icon>
+                            <headerType>console</headerType>
+                            <outfile>${artifacts.output.directory}/Server.exe</outfile>
+                            <jar>${artifacts.output.directory}/Server.jar</jar>
+                            <errTitle>${project.artifactId}</errTitle>
+                            <jre>
+                                <path>%JAVA_HOME%;%PATH%</path>
+                                <requiresJdk>false</requiresJdk>
+                                <requires64Bit>false</requires64Bit>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>0.${project.version}</fileVersion>
+                                <txtFileVersion>${project.version}</txtFileVersion>
+                                <fileDescription>Server executable for ${project.artifactId}</fileDescription>
+                                <copyright>${project.groupId}</copyright>
+                                <productVersion>0.${project.version}</productVersion>
+                                <txtProductVersion>${project.version</txtProductVersion>
+                                <productName>${project.artifactId} Server</productName>
+                                <internalName>${project.artifactId} Server</internalName>
+                                <originalFilename>Server.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                    <!-- Client Executable -->
+                    <execution>
+                        <id>executable-client-main</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <icon>src/main/resources/images/client.ico</icon>
+                            <headerType>console</headerType>
+                            <outfile>${artifacts.output.directory}/Client.exe</outfile>
+                            <jar>${artifacts.output.directory}/Client.jar</jar>
+                            <errTitle>${project.artifactId}</errTitle>
+                            <jre>
+                                <path>%JAVA_HOME%;%PATH%</path>
+                                <requiresJdk>false</requiresJdk>
+                                <requires64Bit>false</requires64Bit>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>0.${project.version}</fileVersion>
+                                <txtFileVersion>${project.version}</txtFileVersion>
+                                <fileDescription>Client executable for ${project.artifactId}</fileDescription>
+                                <copyright>${project.groupId}</copyright>
+                                <productVersion>0.${project.version}</productVersion>
+                                <txtProductVersion>${project.version</txtProductVersion>
+                                <productName>${project.artifactId} Client</productName>
+                                <internalName>${project.artifactId} Client</internalName>
+                                <originalFilename>Client.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+            <!-- Create Artifacts SHA-256 Hashes -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>powershell</executable>
+                            <arguments>
+                                <argument>-NoProfile</argument>
+                                <argument>-Command</argument>
+                                <argument>
+                                    &quot;src\main\resources\scripts\artifacts-hashing.ps1&quot;
+                                </argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
+        <!-- General Section -->
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.17.0</version>
         </dependency>
+        <!-- Networking Section -->
+        <!-- https://mvnrepository.com/artifact/com.sshtools/porter -->
+        <dependency>
+            <groupId>com.sshtools</groupId>
+            <artifactId>porter</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <!-- Terminal Section -->
         <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jline/jline -->
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline</artifactId>
-            <version>3.24.1</version>
+            <version>3.28.0</version>
+        </dependency>
+        <!-- Logging Section -->
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.5.16</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.16</version>
         </dependency>
     </dependencies>
 
