--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,6 @@
           <configLocation>google_checks.xml</configLocation>
           <failsOnError>true</failsOnError>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
-          <linkXRef>false</linkXRef><!---->
-          <outputDirectory>${project.artifacts.directory}/checkstyle</outputDirectory>
         </configuration>
         <executions>
           <execution>
@@ -143,7 +141,7 @@
                 <argument>-NoProfile</argument>
                 <argument>-Command</argument>
                 <argument>
-                  &quot;src\main\resources\scripts\artifacts-hashing.ps1&quot;
+                  &quot;src/main/resources/scripts/artifacts-hashing.ps1&quot;
                 </argument>
               </arguments>
               <executable>powershell</executable>
@@ -158,7 +156,7 @@
         <version>3.5.0</version>
       </plugin>
     </plugins>
-    <sourceDirectory>src/main/java/org/gladiator</sourceDirectory>
+    <sourceDirectory>src/main/java</sourceDirectory>
   </build>
   <dependencies>
     <!-- General Section -->
