build: fix nullaway plugin check on pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
           <compilerArgs>
             <arg>-XDcompilePolicy=simple</arg>
             <arg>--should-stop=ifError=FLOW</arg>
-            <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=org.gladiator.app</arg>
+            <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=org.gladiator</arg>
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
